RESOLVED FIXED45298
[GTK] [REGRESSION] r66848 caused a crash in testwebview
https://bugs.webkit.org/show_bug.cgi?id=45298
Summary [GTK] [REGRESSION] r66848 caused a crash in testwebview
Martin Robinson
Reported 2010-09-07 08:41:08 PDT
The issue seems to be that adjustments are attaching to non-MainFrameScrollbarGtk instances.
Attachments
Fix for the crash (1.49 KB, patch)
2010-09-07 08:47 PDT, Martin Robinson
xan.lopez: review+
Martin Robinson
Comment 1 2010-09-07 08:47:06 PDT
Created attachment 66727 [details] Fix for the crash
Xan Lopez
Comment 2 2010-09-07 08:48:43 PDT
Comment on attachment 66727 [details] Fix for the crash Yay.
Martin Robinson
Comment 3 2010-09-07 08:55:41 PDT
Martin Robinson
Comment 4 2010-09-07 10:11:41 PDT
Note You need to log in before you can comment on or make changes to this bug.