2010-09-07  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] [REGRESSION] r66848 caused a crash in testwebview
        https://bugs.webkit.org/show_bug.cgi?id=45298

        No new tests as this fixes a test failure.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments): Don't actually attach the
        scrollbar adjustments unless this is a main frame ScrollView. If we do
        Scrollbars will be cast incorrectly to MainFrameScrollbarGtk, causing
        a segfault.

Canonical link: https://commits.webkit.org/57643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66885 268f45cc-cd09-0410-ab3c-d52691b4dbfc